# rspacker

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  pyproject.toml
src/: lib.rs  main.rs
src/modules/: mod.rs  platform.rs  urlparser.rs
