[package]
name = "rspacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "librsp"
crate-type = ["cdylib"]

[dependencies]
dirs = "5.0.1"
pyo3 = "0.21.1"
reqwest = "0.12.9"
tokio = "1.41.1"
zip = "2.2.0"
